# Box2DAndroidBenchmark

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.c
app/src/main/java/com/brentonbostick/box2dbenchmark/: NativeLoader.java
app/src/main/java/com/raylib/raymob/: NativeLoader.java
app/src/main/res/values/: strings.xml
output/simd-off/: joint_grid.csv  large_pyramid.csv  many_pyramids.csv  smash.csv  transcript.txt  tumbler.csv
output/simd-on/: joint_grid.csv  large_pyramid.csv  many_pyramids.csv  smash.csv  transcript.txt  tumbler.csv
